# dependobuf

./: Cargo.toml  Clippy.toml  snapshot_lsp_sample_elaboration.snap  tempo_file
dbuf/: Cargo.toml
dbuf-core/: Cargo.toml
dbuf-core/src/: elaborated_module.rs  expression.rs  lib.rs  location.rs  parsed_module.rs
dbuf-core/src/arena/: mod.rs
dbuf-core/src/ast/: elaborated.rs  operators.rs
dbuf-core/src/ast/parsed/: intro.rs  located_name.rs  located_string.rs  location.rs  mod.rs
dbuf-core/src/cst/: cst_to_ast.rs  label.rs  lexer.rs  located_token.rs  location.rs  mod.rs  parser.rs  parser_error.rs  parser_utils.rs  parser_whitespace.rs  token.rs
dbuf-core/src/elaboration/: apply.rs  builtins.rs  context.rs  graph.rs  map_ast.rs  mod.rs  operators.rs  rename.rs  subst.rs  typecheck.rs  unify.rs
dbuf-core/src/elaboration/normalize/: mod.rs
dbuf-core/src/error/: elaborating.rs  lexing.rs  mod.rs  parsing.rs
dbuf-core/src/location/: located_name.rs  location_impl.rs  mod.rs
dbuf-core/src/parser/: lexer.rs  mod.rs  parser.rs  parser_impl.rs
dbuf-core/src/parser/grammar/: gram.ungram
dbuf-core/src/typecheck/: advanced.rs  apply.rs  builtins.rs  checker.rs  context.rs  elaboration.rs  graph.rs  integration_tests.rs  interning.rs  mod.rs  rename.rs  scope_checks.rs  simple.rs  strategy.rs  subst.rs  typecheck.rs  unify.rs
dbuf-core/tests/: mod.rs
dbuf-core/tests/elaboration/: elaboration_correct.rs  elaboration_incorrect.rs  mod.rs
dbuf-core/tests/elaboration/correct_dbufs/: binary_ops.dbuf  bool_tag.dbuf  builtin_deps.dbuf  chained_field_access.dbuf  dep_chain.dbuf  dep_on_dep.dbuf  dependent_messages.dbuf  dot_access.dbuf  dot_access_ctor_args.dbuf  enum_as_dep.dbuf  enum_dep_on_parametric_enum.dbuf  enum_exhaustive_no_wildcard.dbuf  enums_dependent.dbuf  enums_mixed_pattern.dbuf  enums_multi_dep.dbuf  enums_recursive.dbuf  enums_simple.dbuf  enums_uint_string_dep.dbuf  enums_wildcard_implicits.dbuf  equiv_normalization_in_dep.dbuf  expressions.dbuf  field_on_field.dbuf  int_literal_patterns.dbuf  literals.dbuf  message_as_enum_dep.dbuf  message_constructor_as_dep.dbuf  normalize_arithmetic.dbuf  parametric_enum_as_dep.dbuf  pattern_var_multi_field.dbuf  shadow_dep_name.dbuf  shadow_field_over_pattern.dbuf  shadow_partial.dbuf  shadow_pattern_accessible.dbuf  simple_messages.dbuf  string_ops_extended.dbuf  unary_ops.dbuf
dbuf-core/tests/elaboration/incorrect_dbufs/: binary_bool_plus.dbuf  binary_mixed_builtin_types.dbuf  binary_string_minus.dbuf  binary_string_multiply.dbuf  constructor_pattern_wrong_field_count.dbuf  constructor_where_builtin_expected.dbuf  cycle.dbuf  dep_too_many_args.dbuf  dep_wrong_type_order.dbuf  dot_access_ctor_accessed_field_invalid.dbuf  dot_access_on_builtin.dbuf  dot_access_on_enum.dbuf  dot_access_unknown_field.dbuf  enum_unknown_dep_type.dbuf  enum_wrong_pattern_count.dbuf  field_forward_ref.dbuf  literal_wrong_type.dbuf  negative_literal_as_uint.dbuf  no_initial_constructor_enum.dbuf  no_initial_constructor_message.dbuf  pattern_literal_type_mismatch.dbuf  pattern_var_reuse.dbuf  three_way_cycle.dbuf  type_mismatch.dbuf  type_mismatch_enum_as_builtin.dbuf  uint_subtraction.dbuf  unary_bang_on_int.dbuf  unary_minus_on_bool.dbuf  unary_minus_on_uint.dbuf  unknown_dep_type.dbuf  (+6 more)
dbuf-core/tests/parsing/: mod.rs  parsing_correct.rs  parsing_warnings.rs
dbuf-gen/: Cargo.toml
dbuf-gen/src/: codegen.rs  lib.rs  scope.rs  swift_gen.rs
dbuf-gen/src/ast/: from_elaborated.rs  mod.rs
dbuf-gen/src/generate/: namespace.rs  node.rs
dbuf-gen/src/kotlin_gen/: generate.rs  mod.rs  target.rs
dbuf-gen/src/rust_gen/: context.rs  generate.rs
dbuf-gen/src/swift_gen/: generate.rs  mod.rs
dbuf-gen/tests/: canon-kotlin.rs  canon-rust.rs  canon.rs  canon_swift.rs  common.rs  gen_tests.rs  semantics.rs
dbuf-gen/tests/canon-kotlin/: basic.kt  nat_vec.kt
dbuf-gen/tests/canon_swift/: nat_vec.swift
dbuf-gen/tests/common/: mod.rs
dbuf-gen/tests/kotlin/: canon.rs  canon_tests.rs
dbuf-gen/tests/rust/: canon.rs  canon_tests.rs  semantics_tests.rs
dbuf-gen/tests/swift/: canon.rs  canon_tests.rs
dbuf-lsp/: Cargo.toml
dbuf-lsp/src/: ast_access.rs  backend.rs  handler.rs  handler_box.rs  lib.rs  main.rs  trace.rs
dbuf-lsp/src/action/: mod.rs  rename.rs
dbuf-lsp/src/action_handler/: mod.rs  rename.rs  rename_cache.rs
dbuf-lsp/src/common/: ast_access.rs  ast_builder.rs  ast_constructors_stack.rs  ast_fix_locations.rs  ast_scope.rs  dbuf_language.rs  errors.rs  handler.rs  mod.rs  pretty_printer.rs
dbuf-lsp/src/completion/: completion_impl.rs  mod.rs
dbuf-lsp/src/completion_handler/: mod.rs
dbuf-lsp/src/core/: dbuf_language.rs  mod.rs  pretty_printer.rs
dbuf-lsp/src/diagnostic/: code_lens.rs  diagnostic_impl.rs  document_symbol.rs  mod.rs
dbuf-lsp/src/diagnostic_handler/: code_lens.rs  document_symbol.rs  mod.rs
dbuf-lsp/src/navigation/: hover.rs  inlay_hint.rs  mod.rs
dbuf-lsp/src/navigation_handler/: code_lens.rs  hover.rs  inlay_hint.rs  mod.rs
dbuf-lsp/src/testing/: mod.rs
dbuf-lsp/tests/: common_tests.rs  completion_tests.rs  sample.dbuf
dbuf-lsp/tests/action/: format_tests.rs  mod.rs  rename_tests.rs
dbuf-lsp/tests/common/: file_generator.rs  mod.rs
dbuf-lsp/tests/completion/: completion_tests.rs  mod.rs
dbuf-lsp/tests/diagnostic/: lens_tests.rs  references_tests.rs  semantic_tests.rs  symbol_tests.rs
dbuf-lsp/tests/navigation/: goto_tests.rs  hover_tests.rs  inlay_tests.rs  mod.rs
dbuf/src/: cli.rs  file.rs  file_content.rs  lib.rs  main.rs  reporter.rs  run_compile.rs  run_format.rs  run_lsp.rs
dbuf/src/cli/: file.rs  mod.rs  reporter.rs  run_compile.rs  run_lsp.rs
(+203 files in other folders)
