[workspace]
members = ["dbuf-core", "dbuf-lsp"]
resolver = "2"

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
dbuf-core = { path = "./dbuf-core" }
tokio = {version = "1.44.2", features = ["full"]}
tower-lsp = "0.20.0"
dashmap = "6.1.0"
pretty = "0.12.4" 
chumsky = { version = "0.10.1", features = ["pratt"] }
logos = "0.15.0"
unescape = "0.1.0"
