[package]
edition.workspace = true
name = "dbuf-core"
version.workspace = true

[dependencies]
internment.workspace = true

chumsky.workspace = true
logos.workspace = true
unescape.workspace = true

regex.workspace = true
strum.workspace = true
strum_macros.workspace = true
thiserror.workspace = true

[dev-dependencies]
insta.workspace = true
pretty_assertions.workspace = true

[lints]
workspace = true
