[package]
name = "dbuf-core"
edition.workspace = true
version.workspace = true

[dependencies]
num-traits.workspace = true
internment.workspace = true

chumsky.workspace = true
logos.workspace = true
unescape.workspace = true

thiserror.workspace = true
strum.workspace = true
strum_macros.workspace = true
regex.workspace = true

[dev-dependencies]
insta.workspace = true

[lints]
workspace = true
