[package]
edition.workspace = true
name = "dbuf-core"
version.workspace = true

[dependencies]
num-traits.workspace = true
internment.workspace = true

chumsky.workspace = true
logos.workspace = true
unescape.workspace = true

regex.workspace = true
strum.workspace = true
strum_macros.workspace = true
thiserror.workspace = true

[dev-dependencies]
insta.workspace = true

[lints]
workspace = true
