[package]
edition.workspace = true
name = "dbuf-gen"
version.workspace = true

[features]
rust = []
kotlin = []
swift = []
all = ["rust", "kotlin", "swift"]

[dependencies]
dbuf-core.workspace = true
pretty.workspace = true

[dev-dependencies]
dbuf-rust-runtime.workspace = true
pretty_assertions.workspace = true

[lints]
workspace = true
