[package]
name = "dbuf-lsp"
edition.workspace = true
version.workspace = true

[dependencies]
dbuf-core.workspace = true

tower-lsp.workspace = true
tokio.workspace = true
dashmap.workspace = true
pretty.workspace = true
strum.workspace = true
strum_macros.workspace = true
thiserror.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[lints]
workspace = true
