[package]
edition.workspace = true
name = "dbuf"
version.workspace = true

[features]
lsp = ["dbuf-lsp"]

[dependencies]
# The dbuf-lsp crate cannot be included as a workspace dependency because it needs to be optional
dbuf-lsp = {path = "../dbuf-lsp", optional = true}

ariadne.workspace = true
clap.workspace = true
dbuf-core.workspace = true
thiserror.workspace = true

# Probably worth add features for each language
dbuf-gen.workspace = true

# TODO: make as feature
dbuf-format.workspace = true

[lints]
workspace = true
